Bug 480452 - konversation kf6 embedded konsole doesn't work
Summary: konversation kf6 embedded konsole doesn't work
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: argonel
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-28 18:10 UTC by Alessandro Astone
Modified: 2024-01-31 04:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
konsole window (17.63 KB, image/png)
2024-01-28 18:10 UTC, Alessandro Astone
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alessandro Astone 2024-01-28 18:10:44 UTC
Created attachment 165314 [details]
konsole window

STEPS TO REPRODUCE
1. Open konsole
2. Navigate to Window -> New Konsole
3. Select the Konsole tab on the left

OBSERVED RESULT
No terminal; see attachment

EXPECTED RESULT
The terminal is shown

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Fedora Rawhide KDE
(available in About System)
KDE Plasma Version: 5.92.0
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Comment 1 argonel 2024-01-31 04:20:14 UTC
Git commit c2421f419e162ad2e7a09cf9eeb5611aba3d3263 by Eli MacKenzie.
Committed on 31/01/2024 at 04:04.
Pushed by argonel into branch 'release/24.02'.

Fix the embedded Konsole

Qt6 appears to require the explicit addition of the kpart's widget to
its parent.

M  +1    -0    src/konsolepanel.cpp

https://invent.kde.org/network/konversation/-/commit/c2421f419e162ad2e7a09cf9eeb5611aba3d3263