Fix the embedded Konsole

Qt6 appears to require the explicit addition of the kpart's widget to
its parent.

BUG: 480452